--- a/perfil.html
+++ b/perfil.html
@@ -49,7 +49,7 @@
     <div class="edit-main-container">
         <form method="post">
         <div class="edit-image-container">
-            <img src="imagens/perfil_imagen.png"/>
+            <img src="imagens/perfil_imagem.png"/>
 
                 <div>
                     <label for="imagefile">Alterar foto</label>
