--- a/codigo/login/login.html
+++ b/codigo/login/login.html
@@ -12,7 +12,7 @@
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-   <link rel="stylesheet" href="/login/login.css">
+   <link rel="stylesheet" href="login.css" />
 </head>
 
 
@@ -21,7 +21,7 @@
     <header>
         <div class="logo">
             <a class="logo" href="/">
-                <img src="/login/imagens/logo1.png" />
+                <img src="imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+                    <a class="nav-link" href="?????">Aluguel</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="?????">Compra</a>
@@ -51,7 +51,7 @@
     <section class="area-login">
         <div class="login2">
             <div>
-                <img src="/login/imagens/logo1.png">
+                <img src="imagens/logo1.png">
             </div>
 
             <form method="POST">
@@ -59,7 +59,7 @@
                 <input type="password" name="senha" required placeholder="Senha">
                 <input type="submit" value="entrar">
             </form>
-            <p>Não possui uma conta? <a href="/cadastro/cadastro.html">Criar uma conta</a></p>
+            <p>Não possui uma conta? <a href="cadastro.html">Criar uma conta</a></p>
         </div>
     </section>
 
@@ -80,9 +80,9 @@
 
             <div class="row">
                 <ul>
-                    <li><a href="/home/home.html">Principal</a></li>
-                    <li><a href="/sobre/sobre.html">Sobre nos</a></li>
-                    <li><a href="/pagealuguel/aluguel">Aluguel</a></li>
+                    <li><a href="#">Principal</a></li>
+                    <li><a href="#">Sobre nos</a></li>
+                    <li><a href="#">Aluguel</a></li>
                     <li><a href="#">Compra</a></li>
                     <li><a href="#">Clube de Descontos</a></li>
                 </ul>
