--- a/codigo/cadastro/cadastro.html
+++ b/codigo/cadastro/cadastro.html
@@ -12,14 +12,15 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="cadastro.js">
-        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="cadastro.css">
+        <script src = cadastro.js></script>
      </head>
 
 <body>
     <header>
         <div class="logo">
             <a class="logo" href="/">
-                <img src="/cadastro/imagens/logo1.png" />
+                <img src="imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
@@ -48,17 +49,17 @@
     <section class="area-login">
         <div class="login"; style="height: 600px;">
             <div>
-                <img src="/cadastro/imagens/logo1.png">
+                <img src="imagens/logo1.png">
             </div>
 
-            <form method="POST" onsubmit="SenhaOK();">
-                <input type="text" name="nome" required placeholder="nome do usuario" autofocus>
-                <input type="mail" name="e-mail" required placeholder="e-mail" autofocus>
-                <input type="tel" name="telefone" required placeholder="telefone" autofocus>
-                <input type="number" name="nome" required placeholder="CPF" autofocus>
-                <input type="password" name="senha" required onchange='mesmasenha();' placeholder="senha">
-                <input type="password" name="confirmar" required onchange='mesmasenha();' placeholder="confirmar senha">
-                <input type="submit" value="entrar">
+            <form method="POST">
+                <input type="text" name="nome" id="nome" required placeholder="nome do usuario" autofocus>
+                <input type="mail" name="e-mail" id="email" required placeholder="e-mail" autofocus>
+                <input type="tel" name="telefone" id="tel" required placeholder="telefone" autofocus>
+                <input type="number" name="cpf" id="cpf" required placeholder="CPF" autofocus>
+                <input type="password" name="senha" id="senha" required placeholder="senha">
+                <input type="password" name="confirmar" id="confirmsenha" required placeholder="confirmar senha">
+                <input class="btn-submit" value="entrar" id="btncadastro" onclick="validatesenha()">
             </form>
             <p>Já possui uma conta? <a href="../view/login.html">Logar</a></p>
         </div>
