--- a/codigo/login/login.html
+++ b/codigo/login/login.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
    <link rel="stylesheet" href="login.css" />
+   <script src="login.js"></script>
 
     <script src="login.js"></script>
 </head>
@@ -61,10 +62,10 @@
                 <input type="nome" name="nome" id="user" required placeholder="Nome do usuario" autofocus>
                 <label id='userlabel' for="user"></label>
 
-                <input type="password" name="senha" id="senha" required placeholder="Senha">
+                <input type="password" name="senha" id="password" required placeholder="Senha">
                 <label id='senhalabel' for="senha"></label>
 
-                <input onclick="enter()" type="submit" id="btnentrar" value="entrar">
+                <input class="btnentrar" onclick="login()" id="btnentrar" value="entrar">
             </form>
             <p>Não possui uma conta? <a href="cadastro.html">Criar uma conta</a></p>
         </div>
