--- a/desconto/desconto.html
+++ b/desconto/desconto.html
@@ -68,7 +68,7 @@
                             potência.
                         </p>
                         <a href='https://im.ge/i/S8rAg4/'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -80,7 +80,7 @@
                             confortável.
                         </p>
                         <a href='https://im.ge/i/S8rAg4/'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -92,7 +92,7 @@
                             2.0.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -103,7 +103,7 @@
                             Novo Fiat Cronos 2023 Com Motor Firefly 1.3 E Autêntico Design Esportivo. Viva No Plural.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -114,7 +114,7 @@
                             O Renault DUSTER tem Maior Altura do Solo, Porta Malas de 475L e Encara Qualquer Estrada.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -125,7 +125,7 @@
                             Fiat Fastback, O Novo SUV Coupé Da Fiat. Direção Mais Esportiva, Respostas Mais Rápidas.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
 
@@ -138,7 +138,7 @@
                             categoria .
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -150,7 +150,7 @@
                             você.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -162,7 +162,7 @@
 
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -174,7 +174,7 @@
                             Segurança.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -186,7 +186,7 @@
                             Kessy.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
                 <div class="card-item">
@@ -198,7 +198,7 @@
                             conforto.
                         </p>
                         <a href='https://im.ge/i/S8rAg4'>
-                            <button type="button">Clube de Descontos!</button></a>
+                            <button type="button">Veja seu  Descontos!</button></a>
                     </div>
                 </div>
             </div>
