--- a/codigo/login/login.html
+++ b/codigo/login/login.html
@@ -56,6 +56,8 @@
                 <img src="imagens/logo1.png">
             </div>
 
+            <div id="msgFormulario"></div>
+
             <div id = 'msgError'></div>
 
             <form method="POST">
@@ -65,7 +67,7 @@
                 <input type="password" name="senha" id="password" required placeholder="Senha">
                 <label id='senhalabel' for="senha"></label>
 
-                <input class="btnentrar" onclick="login()" id="btnentrar" value="entrar">
+                <input type="button" class="btnentrar" onclick="campos()" id="btnentrar" value="entrar">
             </form>
             <p>Não possui uma conta? <a href="cadastro.html">Criar uma conta</a></p>
         </div>
@@ -89,10 +91,10 @@
 
             <div class="row">
                 <ul>
-                    <li><a href="/home/home.html">Principal</a></li>
-                    <li><a href="/sobre/sobre.html">Sobre nos</a></li>
-                    <li><a href="/pagealuguel/aluguel.html">Aluguel</a></li>
-                    <li><a href="/compra/compra.html">Compra</a></li>
+                    <li><a href="#">Principal</a></li>
+                    <li><a href="#">Sobre nos</a></li>
+                    <li><a href="#">Aluguel</a></li>
+                    <li><a href="#">Compra</a></li>
                     <li><a href="#">Clube de Descontos</a></li>
                 </ul>
             </div>
