--- a/codigo/pagealuguel/aluguel.html
+++ b/codigo/pagealuguel/aluguel.html
@@ -89,11 +89,11 @@
 
         <label>
           <h4>Numero de dias</h4>
-          <input type="number" name="numeroDias" id="numeroDias">
+          <input type="number" name="numeroDias" id="numeroDias" style="width: 448px; border-radius: 5px;box-shadow: 2px 2px #d8291c;">
         </label>
 
         <p>
-          <button type="button" id="search" onclick="CaucularDiaria()">Consultar</button>
+          <button type="button" id="search" onclick="CaucularDiaria()" >Consultar</button>
         </p>
       </div>
 
