--- a/codigo/login/login.html
+++ b/codigo/login/login.html
@@ -14,7 +14,6 @@
    <link rel="stylesheet" href="login.css" />
    <script src="login.js"></script>
 
-    <script src="login.js"></script>
 </head>
 
 
@@ -22,8 +21,8 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logo" href="/">
-                <img src="imagens/logo1.png" />
+            <a class="logo" href="/home/home.html">
+                <img src="/imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
@@ -53,12 +52,14 @@
     <section class="area-login">
         <div class="login2">
             <div>
-                <img src="imagens/logo1.png">
+                <img src="/imagens/logo1.png">
             </div>
 
             <div id="msgFormulario"></div>
 
             <div id = 'msgError'></div>
+
+            <div id="msgSuccess"></div>
 
             <form method="POST">
                 <input type="nome" name="nome" id="user" required placeholder="Nome do usuario" autofocus>
@@ -69,7 +70,7 @@
 
                 <input type="button" class="btnentrar" onclick="campos()" id="btnentrar" value="entrar">
             </form>
-            <p>Não possui uma conta? <a href="cadastro.html">Criar uma conta</a></p>
+            <p>Não possui uma conta? <a href="/cadastro/cadastro.html">Criar uma conta</a></p>
         </div>
 
     </section>
