--- a/codigo/cadastro/cadastro.html
+++ b/codigo/cadastro/cadastro.html
@@ -19,8 +19,8 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logo" href="/">
-                <img src="imagens/logo1.png" />
+            <a class="logo" href="/home/home.html">
+                <img src="/imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
@@ -49,7 +49,7 @@
     <section class="area-login">
         <div class="login"; style="height: 630px;">
             <div>
-                <img src="imagens/logo1.png">
+                <img src="/imagens/logo1.png">
             </div>
 
             <div id="msgFormulario"></div>
@@ -70,13 +70,13 @@
                 <input type="number" name="cpf" id="cpf" placeholder="CPF" required>
 
 
-                <input type="text" name="senha" id="senha" placeholder="senha" required>
+                <input type="password" name="senha" id="senha" placeholder="senha" required>
 
 
-                <input type="text" name="confirmar" id="confirmsenha" placeholder="confirmar senha" required>
+                <input type="password" name="confirmar" id="confirmsenha" placeholder="confirmar senha" required>
 
 
-                <input class="btn-submit" type="button" value="entrar" id="btncadastro" onclick="campos()">
+                <input class="btn-submit" type="button" value="cadastrar" id="btncadastro" onclick="campos()">
             </form>
             <p>Já possui uma conta? <a href="/login/login.html">Logar</a></p>
         </div>
