Páginas com rotas corrigidas
Todos os botões estão funcionando e todos os arquivos css estão ligados nos arquivos html corretos

--- a/codigo/cadastro/cadastro.html
+++ b/codigo/cadastro/cadastro.html
@@ -19,26 +19,26 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logo" href="/home/home.html">
-                <img src="/imagens/logo1.png" />
+            <a class="logo" href="../home/home.html">
+                <img src="../imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
             <ul class="navbar" ;>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/home/home.html"> Principal </a>
+                    <a class="nav-link" href="../home/home.html"> Principal </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
+                    <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+                    <a class="nav-link" href="../pagealuguel/aluguel.html">Aluguel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/compra/compra.html">Compra</a>
+                    <a class="nav-link" href="../compra/compra.html">Compra</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="?????">Clube de Descontos</a>
+                    <a class="nav-link" href="../desconto/desconto.html">Clube de Descontos</a>
                 </li>
 
             </ul>
@@ -49,7 +49,7 @@
     <section class="area-login">
         <div class="login"; style="height: 630px;">
             <div>
-                <img src="/imagens/logo1.png">
+                <img src="../imagens/logo1.png">
             </div>
 
             <div id="msgFormulario"></div>
@@ -78,7 +78,7 @@
 
                 <input class="btn-submit" type="button" value="cadastrar" id="btncadastro" onclick="campos()">
             </form>
-            <p>Já possui uma conta? <a href="/login/login.html">Logar</a></p>
+            <p>Já possui uma conta? <a href="../login/login.html">Logar</a></p>
         </div>
     </section>
     <!--FOOTER-->
@@ -96,11 +96,11 @@
 
             <div class="row">
                 <ul>
-                    <li><a href="/home/home.html">Principal</a></li>
-                    <li><a href="/sobre/sobre.html">Sobre Nos</a></li>
-                    <li><a href="/pagealuguel/aluguel.html">Aluguel</a></li>
-                    <li><a href="#">Compra</a></li>
-                    <li><a href="#">Clube de Descontos</a></li>
+                    <li><a href="../home/home.html">Principal</a></li>
+                    <li><a href="../sobre/sobre.html">Sobre Nos</a></li>
+                    <li><a href="../pagealuguel/aluguel.html">Aluguel</a></li>
+                    <li><a href="../compra/compra.html">Compra</a></li>
+                    <li><a href="../desconto/desconto.html">Clube de Descontos</a></li>
                 </ul>
             </div>
 
