--- a/codigo/perfil/perfil.html
+++ b/codigo/perfil/perfil.html
@@ -18,26 +18,26 @@
     <header>
         <div class="logo">
             <a class="logo" href="/home/home.html">
-                <img src="/imagens/logo1.png" />
+                <img src="../imagens/logo1.png" />
             </a>
         </div>
 
         <div class="links">
             <ul class="navbar" ;>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/home/home.html"> Principal </a>
+                    <a class="nav-link" href="../home/home.html"> Principal </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
+                    <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+                    <a class="nav-link" href="../pagealuguel/aluguel.html">Aluguel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/compra/compra.html">Compra</a>
+                    <a class="nav-link" href="../compra/compra.html">Compra</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="?????">Clube de Descontos</a>
+                    <a class="nav-link" href="../desconto/desconto.html">Clube de Descontos</a>
                 </li>
 
             </ul>
@@ -51,7 +51,7 @@
 
         <div class="profile-container">
             <div>
-                <img src="/imagens/logo1.png" />
+                <img src="../imagens/logo1.png" />
             </div>
 
             <div id="msgFormulario"></div>
@@ -89,13 +89,14 @@
             </div>
 
             <div class="row">
-                <ul>
-                    <li><a href="#">Principal</a></li>
-                    <li><a href="#">Sobre nos</a></li>
-                    <li><a href="#">Aluguel</a></li>
-                    <li><a href="#">Compra</a></li>
-                    <li><a href="#">Clube de Descontos</a></li>
-                </ul>
+                
+                    <ul>
+                        <li><a href="../home/home.html">Principal</a></li>
+                        <li><a href="../sobre/sobre.html">Sobre nos</a></li>
+                        <li><a href="../pagealuguel/aluguel.html">Aluguel</a></li>
+                        <li><a href="../compra/compra.html">Compra</a></li>
+                        <li><a href="../desconto/desconto.html">Clube de Descontos</a></li>
+                     </ul>
             </div>
 
             <div class="copy">
