--- a/codigo/home/home.html
+++ b/codigo/home/home.html
@@ -9,8 +9,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-   <link rel="shortcut icon" href="/imagens/logo1.png">
-   <link rel="stylesheet" href="/home/home.css" />
+   <link rel="shortcut icon" href="../imagens/logo1.png">
+   <link rel="stylesheet" href="home.css" />
 
 </head>
 
@@ -20,34 +20,34 @@
 
    <header>
       <div>
-         <a class="logo" href="/home/home.html">
-            <img src="/imagens/logo1.png" />
+         <a class="logo" href="../home/home.html">
+            <img src="../imagens/logo1.png" />
          </a>
       </div>
       <div class="links">
          <ul class="navbar" ;>
             <li class="nav-item ">
-               <a class="nav-link" href="/home/home.html"> Principal </a>
+               <a class="nav-link" href="../home/home.html"> Principal </a>
             </li>
             <li class="nav-item active">
-               <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
+               <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+               <a class="nav-link" href="../pagealuguel/aluguel.html">Aluguel</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="/compra/compra.html">Compra</a>
+               <a class="nav-link" href="../compra/compra.html">Compra</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="/desconto/desconto.html">Clube de Descontos</a>
+               <a class="nav-link" href="../desconto/desconto.html">Clube de Descontos</a>
             </li>
             <div class="login">
                <div id ="loginbar">
-                  <a class="button"  href="/login/login.html"
+                  <a class="button"  href="../login/login.html"
                         aria-hidden="true"></i>Login/Register</a>
                </div>
                <div id ="perfilid">
-                  <a class="button" href="/perfil/perfil.html"
+                  <a class="button" href="../perfil/perfil.html"
                         aria-hidden="true"></i>Meu perfil</a>
                </div>
                <div id ="logout">
@@ -73,10 +73,10 @@
          </div>
          <div class="carousel-inner">
             <div class="carousel-item active">
-               <img class="d-block w-100" src="/imagens/home/segundo.png" #alt="first slide">
+               <img class="d-block w-100" src="../imagens/home/segundo.png" #alt="first slide">
             </div>
             <div class="carousel-item ">
-               <img class="d-block w-100" src="/imagens/home/primeiro.png" #alt="second slide">
+               <img class="d-block w-100" src="../imagens/home/primeiro.png" #alt="second slide">
             </div>
 
          </div>
@@ -94,14 +94,14 @@
       </div>
    <div class="segundo">
       <div class="marcas">
-         <div><img src="/imagens/home/marcas/chevrolet.png" alt="chevrolet" /></div>
-         <div><img src="/imagens/home/marcas/fiat.png" alt="fiat"></div>
-         <div><img src="/imagens/home/marcas/ford.png"alt="ford" /></div>
-         <div><img src="/imagens/home/marcas/hyundai.png"alt="hyundai" /></div>
-         <div><img src="/imagens/home/marcas/mercedes.png"alt="mercedes" /></div>
-         <div><img src="/imagens/home/marcas/renault.png" alt="renault" /></div>
-         <div><img src="/imagens/home/marcas/toyota.png"alt="toyota" /></div>
-         <div><img src="/imagens/home/marcas/volks.png" alt="volks" /></div>
+         <div><img src="../imagens/home/marcas/chevrolet.png" alt="chevrolet" /></div>
+         <div><img src="../imagens/home/marcas/fiat.png" alt="fiat"></div>
+         <div><img src="../imagens/home/marcas/ford.png"alt="ford" /></div>
+         <div><img src="../imagens/home/marcas/hyundai.png"alt="hyundai" /></div>
+         <div><img src="../imagens/home/marcas/mercedes.png"alt="mercedes" /></div>
+         <div><img src="../imagens/home/marcas/renault.png" alt="renault" /></div>
+         <div><img src="../imagens/home/marcas/toyota.png"alt="toyota" /></div>
+         <div><img src="../imagens/home/marcas/volks.png" alt="volks" /></div>
       </div>
    </div>
 
@@ -114,40 +114,40 @@
    </div>
    <div class="cardgrupo">
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/card1.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/card1.png" alt="Card image cap">
          <div class="cardbody">
             <h5 class="cardtitle"><b>A FROTA MAIS NOVA E COMPLETA</b></h5>
             <p class="cardtext">Simule o seu Aluguel agora e alem de obter o melhor preço do Brasil
                tera a sua disposiçao o melhor que nossa frota tem a oferecer .Não perca esssa oportunidade e venha ja
                conferir.</p>
             <div class="botao">
-               <a href='/pagealuguel/aluguel.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
+               <a href='../pagealuguel/aluguel.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
             </div>
 
          </div>
       </div>
 
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/card2.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/card2.png" alt="Card image cap">
          <div class="cardbody">
             <h5 class="cardtitle"><b>PREÇO JUSTO</b></h5>
             <p class="cardtext">Quer comprar um carro mas não sabe qual? Não tem problema, na GoCar,
                você encontra todos os modelos e marcas!Alem de encontrar o valor justo de qualquer carro do Brasil
             </p>
             <div class="botao">
-               <a href='/compra/compra.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
+               <a href='../compra/compra.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
 
             </div>
          </div>
       </div>
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/card3.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/card3.png" alt="Card image cap">
          <div class="cardbody">
             <h5 class="cardtitle"><b>CLUBE DE DESCONTOS</b></h5>
             <p class="cardtext">Cadastre-se agora mesmo para participar do nosso clube de desconto exclusivo
                e alem de todos os nossos beneficos você terá acesso a varios cupoms promocionais.</p>
             <div class="botao">
-               <a href='/desconto/desconto.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
+               <a href='../desconto/desconto.html'> <button class="btn btn-dark" type="button">Clique e confira!</button></a>
             </div>
          </div>
       </div>
@@ -166,15 +166,15 @@
    <div class="cardgrupo2">
 
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/ava1.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/ava1.png" alt="Card image cap">
 
       </div>
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/ava2.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/ava2.png" alt="Card image cap">
 
       </div>
       <div class="card">
-         <img class="card-img-top" src="/imagens/home/ava3.png" alt="Card image cap">
+         <img class="card-img-top" src="../imagens/home/ava3.png" alt="Card image cap">
 
       </div>
 
@@ -196,11 +196,11 @@
 
          <div class="row">
             <ul>
-               <li><a href="/home/home.html">Principal</a></li>
-               <li><a href="/sobre/sobre.html">Sobre nos</a></li>
-               <li><a href="/pagealuguel/aluguel.html">Aluguel</a></li>
-               <li><a href="/compra/compra.html">Compra</a></li>
-               <li><a href="/desconto/desconto.html">Clube de Descontos</a></li>
+               <li><a href="../home/home.html">Principal</a></li>
+               <li><a href="../sobre/sobre.html">Sobre nos</a></li>
+               <li><a href="../pagealuguel/aluguel.html">Aluguel</a></li>
+               <li><a href="../compra/compra.html">Compra</a></li>
+               <li><a href="../desconto/desconto.html">Clube de Descontos</a></li>
             </ul>
          </div>
 
