--- a/codigo/login/login.html
+++ b/codigo/login/login.html
@@ -21,23 +21,23 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logo" href="/home/home.html">
-                <img src="/imagens/logo1.png" />
+            <a class="logo" href="../home/home.html">
+                <img src="../imagens/logo1.png" />
             </a>
         </div>
         <div class="links">
             <ul class="navbar" ;>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/home/home.html"> Principal </a>
+                    <a class="nav-link" href="../home/home.html"> Principal </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
+                    <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+                    <a class="nav-link" href="../pagealuguel/aluguel.html">Aluguel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/compra/compra.html">Compra</a>
+                    <a class="nav-link" href="../compra/compra.html">Compra</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="?????">Clube de Descontos</a>
@@ -52,7 +52,7 @@
     <section class="area-login">
         <div class="login2">
             <div>
-                <img src="/imagens/logo1.png">
+                <img src="../imagens/logo1.png">
             </div>
 
             <div id="msgFormulario"></div>
@@ -70,7 +70,7 @@
 
                 <input type="button" class="btnentrar" onclick="campos()" id="btnentrar" value="entrar">
             </form>
-            <p>Não possui uma conta? <a href="/cadastro/cadastro.html">Criar uma conta</a></p>
+            <p>Não possui uma conta? <a href="../cadastro/cadastro.html">Criar uma conta</a></p>
         </div>
 
     </section>
@@ -92,11 +92,11 @@
 
             <div class="row">
                 <ul>
-                    <li><a href="#">Principal</a></li>
-                    <li><a href="#">Sobre nos</a></li>
-                    <li><a href="#">Aluguel</a></li>
-                    <li><a href="#">Compra</a></li>
-                    <li><a href="#">Clube de Descontos</a></li>
+                    <li><a href="../home/home.html">Principal</a></li>
+                    <li><a href="../sobre/sobre.html">Sobre nos</a></li>
+                    <li><a href="../pagealuguel/aluguel.html">Aluguel</a></li>
+                    <li><a href="../compra/compra.html">Compra</a></li>
+                    <li><a href="../desconto/desconto.html">Clube de Descontos</a></li>
                 </ul>
             </div>
 
