--- a/codigo/sobre/sobre.html
+++ b/codigo/sobre/sobre.html
@@ -9,8 +9,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-   <link rel="shortcut icon" href="/imagens/logo1.png">
-  <link rel="stylesheet" href="/sobre/sobre.css" />
+   <link rel="shortcut icon" href="../imagens/logo1.png">
+  <link rel="stylesheet" href="sobre.css" />
 </head>
 
 <body>
@@ -19,30 +19,30 @@
 
   <header>
     <div>
-      <a class="logo" href="/home/home.html">
-        <img src="/imagens/logo1.png" />
+      <a class="logo" href="../home/home.html">
+        <img src="../imagens/logo1.png" />
       </a>
     </div>
     <div class="links">
       <ul class="navbar" ;>
         <li class="nav-item ">
-          <a class="nav-link" href="/home/home.html"> Principal </a>
+          <a class="nav-link" href="../home/home.html"> Principal </a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/sobre/sobre.html">Sobre</a>
+          <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pagealuguel/aluguel.html">Aluguel</a>
+          <a class="nav-link" href="../pagealuguel/aluguel.html">Aluguel</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/compra/compra.html">Compra</a>
+          <a class="nav-link" href="../compra/compra.html">Compra</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/desconto/desconto.html">Clube de Descontos</a>
+          <a class="nav-link" href="../desconto/desconto.html">Clube de Descontos</a>
         </li>
         <div class="login">
           <li class="nav-item d_none">
-            <a class="nav-link" href="/login/login.html"><i class="fa fa-user-circle padd_right"
+            <a class="nav-link" href="../login/login.html"><i class="fa fa-user-circle padd_right"
                 aria-hidden="true"></i>Login/Register</a>
           </li>
         </div>
@@ -62,7 +62,7 @@
         
         <div class="about-content">
           <div class="left">
-            <img src="/imagens/sobre/about.png" alt="About" />
+            <img src="../imagens/sobre/about.png" alt="About" />
           </div>
           <div class="right">
             <h3>Fundada para facilitar a escolha da locomoção</h3>
@@ -94,11 +94,11 @@ Buscamos fazer muitas parcerias com empresas de aluguel e venda de carros para t
 
         <div class="row">
           <ul>
-            <li><a href="/home/home.html">Principal</a></li>
-            <li><a href="/sobre/sobre.html">Sobre nos</a></li>
-            <li><a href="/pagealguel/aluguel.html">Aluguel</a></li>
-            <li><a href="/compra/compra.html">Compra</a></li>
-            <li><a href="/desconto/desconto.html">Clube de Descontos</a></li>
+            <li><a href="../home/home.html">Principal</a></li>
+            <li><a href="../sobre/sobre.html">Sobre nos</a></li>
+            <li><a href="../pagealuguel/aluguel.html">Aluguel</a></li>
+            <li><a href="../compra/compra.html">Compra</a></li>
+            <li><a href="../desconto/desconto.html">Clube de Descontos</a></li>
           </ul>
         </div>
 
