--- a/codigo/home/home.html
+++ b/codigo/home/home.html
@@ -217,7 +217,7 @@
       crossorigin="anonymous"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   <script src="/login/login.js"></script>
+   <script src="../login/login.js"></script>
 
 </body>
 
